<resources>
    <string name="app_name">Refund</string>

    <string name="search">Search</string>
    <string name="lbl1">Mobile Phone Cover</string>
    <string name="lbl2">Item Price</string>
    <string name="lbl3">Order Date</string>
    <string name="btn1">Confirm Order Received</string>
    <string name="btn2">Request Refund</string>
    <string name="lbl4">Mobile Phone Cover</string>

    <string name="hint1">Enter the Reason</string>
    <string name="hint2">Enter the Description</string>
    <string name="hint3">Enter the Amount</string>
    <string name="rlbl1">Reason</string>
    <string name="rlbl2">Description</string>
    <string name="rlbl3">Type</string>
    <string name="rlbl4">Upload Image</string>
    <string name="rlbl5">Description</string>
    <string name="rlbl6">Type</string>
    <string name="rlink">C:destop/newfolder/picture1.jpeg</string>
    <string name="ramount">Maximum amount is : Rs52.50</string>
    <string name="rsize">Maximum size is 2MB</string>
    <string name="rbtn1">SUBMIT</string>
    <string name="radio1">Full Refund</string>
    <string name="radio2">Partial Refund</string>
    <string name="click">Add image</string>
    <string name="rUpdtbtn1">update</string>

    <string name="updateRtxt1">Item Damaged</string>
    <string name="updateRtxt2">When the package recieve it was damaged</string>
    <string name="sfv">update</string>
    <string name="title_activity_view_refund_details">viewRefundDetails</string>
    <string name="title_activity_view_details">viewDetails</string>


    <string name="view1">Item Damaged</string>
    <string name="view2">When the package recieve it was damaged</string>
    <string name="view3">Full Refund</string>
    <string name="view4">C:destop/newfolder/picture1.jpeg</string>
    <string name="view5">Refund Status</string>
    <string name="view6">Progress</string>
    <string name="view7">Admin Note</string>
    <string name="view8">Waiting for refund</string>
    <string name="viewbtn1">Update</string>
    <string name="viewbtn2">Delete</string>


    <string name="itemID">itemID</string>


    <string name="cname">Name</string>
    <string name="cadline1">Address Line 1</string>
    <string name="cadline2">Address Line 2</string>
    <string name="cpcode">Postale Code</string>
    <string name="ccno">Contact Number</string>
    <string name="cemail">Email</string>
    <string name="comsg">Optional Message</string>
    <string name="cbtnSubmit">Submit</string>
    <string name="cbtnUpdate">Update</string>
    <string name="cbtnDelete">Delete</string>
    <string name="cbtnReset">Reset</string>


    <string name="pay_lkr_1500_00">Pay LKR.1500.00</string>
    <string name="lkr_1500_00">LKR 1500.00</string>
    <string name="the_payment_is_completed">Item is Added.</string>
    <string name="thank_you"><b>Thank You!</b></string>

    <string name="Sentemail">We have sent an email to \n <b>mobileaccessories@gmail.com</b> as a receipt.</string>

    <string name="name_of_item">Name of Item</string>
    <string name="category_name">Category Name</string>
    <string name="item_code">Item Code</string>
    <string name="quantity">Quantity</string>
    <string name="discription">Description</string>
    <string name="btn_view_more">View</string>
    <string name="txt_item_price_500">$500</string>
    <string name="txt_item_description">Google has slashed $200 off the price of the Pixel 3 and Pixel 3 XL</string>
    <string name="item_name"><b>Pixel 3 XL</b></string>


    <string name="add_item"><b>ADD ITEM</b></string>
    <string name="screensize">6.3\"</string>
    <string name="camera">12MP</string>
    <string name="ram">4GB RAM</string>
    <string name="battery">3430mAh</string>
    <string name="sound">Loudspeaker 3.5mm jack</string>
    <string name="features">Features</string>
    <string name="item_desctiption">Released 2018, November 184g, 7.9mm thickness Android 9.0 64/128GB storage, no card slot</string>
    <string name="item_information">Google Pixel 3 XL</string>
    <string name="buy">Buy</string>
    <string name="item_desctiption_title"><b>ITEM DESCRIPTION</b></string>
    <string name="item_des">Description</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>


    <string name="title_activity_item_view">ItemView</string>
    <string name="title_activity_category_page">CategoryPage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="cmem">Memory</string>
    <string name="Covers">cv</string>
    <string name="cg">charger</string>
    <string name="meory">Memory</string>
    <string name="addcart">Add to cart</string>

</resources>
