<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gAddItemComplete">






        <ImageView
            android:id="@+id/successimg"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="8dp"
            app:srcCompat="@drawable/gsuccess_image2"
            android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/thankyousuccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="160dp"
        android:layout_marginTop="390dp"
        android:layout_marginEnd="8dp"
        android:text="@string/thank_you"
        android:textAlignment="center"
        android:textSize="24sp" />

        <TextView
            android:id="@+id/completedsuccess"
            android:layout_width="223dp"
            android:layout_height="36dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="105dp"
            android:layout_marginTop="450dp"
            android:layout_marginEnd="8dp"
            android:text="@string/the_payment_is_completed"
            android:textSize="18sp"
            android:textAlignment="center"/>


        <TextView
            android:id="@+id/emailsent"
            android:layout_width="286dp"
            android:layout_height="110dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="105dp"
            android:layout_marginTop="525dp"
            android:layout_marginEnd="8dp"
            android:text="@string/Sentemail"
            android:textSize="18sp"
            android:textAlignment="center"
            android:lineSpacingExtra="10sp"
            />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/gmoreinfo"
            android:layout_marginTop="524dp"
            android:layout_marginStart="75dp"
            tools:ignore="VectorDrawableCompat" />
    </RelativeLayout>